# notification

./: .gitignore  Dockerfile  LOGGING_INTEGRATION.md  README.md  SECURITY_ENHANCEMENTS.md  app.py  pyproject.toml
api/: __init__.py
api/api_v1/: routers.py
api/api_v1/handlers/: __init__.py  logs.py  notification.py  support_ticket.py
core/: config.py  logging_middleware.py
schemas/: __init__.py  notification.py
services/: __init__.py  logging_client.py  send_email_service.py
templates/: change_password.html  email_verification.html  support_ticket.html  support_ticket_confirmation.html
